--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,27 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#H2
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-
+#Security
 spring.application.name=${SPRING_APP_NAME:store}
-spring.security.user.name=${SECURITY_USERNAME:ivan}
-spring.security.user.password=${SECURITY_PASSWORD:12345}
+#spring.security.user.name=${SECURITY_USERNAME:ivan}
+#spring.security.user.password=${SECURITY_PASSWORD:12345}
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
 
+#Consol
 logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
+
+
+#DB
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:store_db}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
